# varlab

./: README.md  pyproject.toml  requirements.txt  setup.sh
.devcontainer/: Dockerfile
tests/: test_risk_minimal.py
varlab/: __init__.py  base.py  diagnostic.py  es.py  targeting.py  var.py  window.py
varlab/backtesting/: __init__.py  coverage.py  diagnostic.py  distribution.py  es_test.py  independence.py  pit.py
